Resolved issue with top of Login and Registration components being covered by nav bar

--- a/client/src/Component/Login/Login.css
+++ b/client/src/Component/Login/Login.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    margin: 20px 0;
+    margin: 125px 0;
 }
 
 .login__form {
